# SDVXPAD

./: CMakeLists.txt  README.md  SDVXPAD.code-workspace
.github/workflows/: build.yml  main.yml
res/www/: app.js  index.html  src.js
src/: CMakeLists.txt  SDVXPAD.vcxproj  SDVXPAD.vcxproj.filters  cmake_install.cmake
src/src/: KeyboardSimulator.cpp  SDVXPADServer.cpp  SDVXPADServer.hpp  main.cpp
static/: README.txt  run.bat
